# snap-core

./: .ghci  .gitignore  .stylish-haskell.yaml  .travis.yml  CONTRIBUTORS  README.SNAP.md  README.md  RELEASE-CHECKLIST  TODO  changelog.md  deploy_hpc.sh  deploy_key_snap_code_coverage.enc  haddock.sh  runCoverage.sh  runTestsAndCoverage.sh  snap-core.cabal  stack.yaml  style-guide.md
.github/workflows/: ci.yml  haskell-ci.yml
cbits/: timefuncs.c
extra/: haddock.css
project_template/barebones/: foo.cabal
project_template/barebones/src/: Common.hs  Main.hs
project_template/default/: foo.cabal
project_template/default/src/: Common.hs  Glue.hs  Main.hs  Server.hs  TemplateDirectory.hs
project_template/src/: Common.hs
src/Data/: CIByteString.hs
src/Snap/: CORS.hs  Cookie.hs  Core.hs  Iteratee.hs  Starter.hs  StarterTH.hs  Test.hs  Types.hs
src/Snap/Core/: UTF8.hs
src/Snap/Http/: Types.hs
src/Snap/Internal/: Core.hs  Debug.hs  Exceptions.hs  Instances.hs  Parsing.hs  Routing.hs  Types.hs
src/Snap/Internal/Http/: Types.hs
src/Snap/Internal/Iteratee/: BoyerMooreHorspool.hs  Debug.hs  KnuthMorrisPratt.hs
src/Snap/Internal/Parsing/: FastSet.hs
src/Snap/Internal/Test/: Assertions.hs  RequestBuilder.hs
src/Snap/Internal/Util/: FileServe.hs  FileUploads.hs
src/Snap/Types/: Headers.hs
src/Snap/Util/: CORS.hs  FileServe.hs  FileUploads.hs  GZip.hs  Proxy.hs  Readable.hs
test/: TestSuite.hs  dist  runTestsAndCoverage.sh  snap-core-testsuite.cabal
test/Snap/Core/: Tests.hs
test/Snap/Internal/Http/Types/: Tests.hs
test/Snap/Internal/Parsing/: Tests.hs
test/Snap/Internal/Routing/: Tests.hs
test/Snap/Test/: Common.hs  Tests.hs
test/Snap/Types/Headers/: Tests.hs
test/Snap/Util/CORS/: Tests.hs
test/Snap/Util/FileServe/: Tests.hs
test/Snap/Util/FileUploads/: Tests.hs
test/Snap/Util/GZip/: Tests.hs
test/Snap/Util/Proxy/: Tests.hs
test/data/fileServe/mydir3/: altindex.html
test/suite/: TestSuite.hs
test/suite/Snap/Core/: Tests.hs
test/suite/Snap/Internal/Http/Types/: Tests.hs
test/suite/Snap/Internal/Parsing/: Tests.hs
test/suite/Snap/Internal/Routing/: Tests.hs
test/suite/Snap/Iteratee/: Tests.hs
test/suite/Snap/Test/: Common.hs  Tests.hs
test/suite/Snap/Test/Assertions/: Tests.hs
test/suite/Snap/Test/RequestBuilder/: Tests.hs
test/suite/Snap/Types/: Tests.hs
test/suite/Snap/Types/Headers/: Tests.hs
test/suite/Snap/Util/FileServe/: Tests.hs
test/suite/Snap/Util/FileUploads/: Tests.hs
test/suite/Snap/Util/GZip/: Tests.hs
test/suite/Snap/Util/Proxy/: Tests.hs
test/suite/Snap/Util/Readable/: Tests.hs
