name:           snap-core-testsuite
version:        0.1.1
build-type:     Simple
cabal-version:  >= 1.6

Flag portable
  Description: Compile in cross-platform mode. No platform-specific code or
               optimizations such as C routines will be used.
  Default: False

Executable testsuite
  hs-source-dirs:  ../src suite
  main-is:         TestSuite.hs

  if flag(portable) || os(windows)
    cpp-options: -DPORTABLE
  else
    c-sources: ../cbits/timefuncs.c
    include-dirs: ../cbits
    build-depends: bytestring-mmap >= 0.2.2 && <0.3,
                   unix >= 2.4 && <3.0
    cpp-options: -DUSE_UNIX

  build-depends:
    QuickCheck >= 2.3.0.2,
    attoparsec >= 0.10 && < 0.11,
    attoparsec-enumerator >= 0.3,
    base >= 4 && < 5,
    base16-bytestring == 0.1.*,
    blaze-builder >= 0.2.1.4 && <0.4,
    blaze-builder-enumerator >= 0.2 && <0.3,
    bytestring,
    bytestring-nums,
    case-insensitive >= 0.3 && < 0.5,
    cereal == 0.3.*,
    containers,
    deepseq >= 1.1 && <1.4,
    directory,
    dlist >= 0.5 && < 0.6,
    filepath,
    HUnit >= 1.2 && < 2,
    enumerator >= 0.4.13.1 && < 0.5,
    MonadCatchIO-transformers >= 0.2 && < 0.3,
    mtl >= 2 && <3,
    mwc-random >= 0.10 && <0.13,
    old-locale,
    old-time,
    parallel >= 3 && <4,
    pureMD5 == 2.1.*,
    regex-posix >= 0.94.4 && <0.96,
    test-framework >= 0.4 && < 0.6,
    test-framework-hunit >= 0.2.5 && < 0.3,
    test-framework-quickcheck2 >= 0.2.6 && < 0.3,
    text >= 0.11 && <0.12,
    time,
    transformers,
    unix-compat >= 0.2 && <0.4,
    unordered-containers >= 0.1.4.3 && <0.3,
    vector >= 0.6 && <0.10,
    zlib,
    zlib-enum >= 0.2.1 && <0.3

  extensions:
    BangPatterns,
    CPP,
    PackageImports,
    ScopedTypeVariables,
    EmptyDataDecls,
    ForeignFunctionInterface,
    OverloadedStrings,
    Rank2Types,
    TypeSynonymInstances,
    FlexibleInstances,
    ExistentialQuantification,
    OverloadedStrings,
    FlexibleContexts,
    GeneralizedNewtypeDeriving,
    DeriveDataTypeable,
    MultiParamTypeClasses

  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
