name:           snap-core-testsuite
version:        0.1.1
build-type:     Simple
cabal-version:  >= 1.6

Flag portable
  Description: Compile in cross-platform mode. No platform-specific code or
               optimizations such as C routines will be used.
  Default: False

Executable testsuite
  hs-source-dirs:  ../src suite
  main-is:         TestSuite.hs

  if flag(portable) || os(windows)
    cpp-options: -DPORTABLE
  else
    c-sources: ../cbits/timefuncs.c
    include-dirs: ../cbits
    build-depends: bytestring-mmap >= 0.2.2 && <0.3,
                   unix >= 2.4 && <3.0
    cpp-options: -DUSE_UNIX

  build-depends:
    QuickCheck                 >= 2.3.0.2  && <3,
    attoparsec                 >= 0.10     && <0.11,
    attoparsec-enumerator      >= 0.3,
    base                       >= 4        && <5,
    blaze-builder              >= 0.2.1.4  && <0.4,
    blaze-builder-enumerator   >= 0.2      && <0.3,
    bytestring,
    case-insensitive           >= 0.3      && <1.1,
    cereal                     >= 0.3      && <0.4,
    containers,
    deepseq                    >= 1.1      && <1.4,
    directory,
    filepath,
    HUnit                      >= 1.2      && <2,
    enumerator                 >= 0.4.13.1 && <0.5,
    MonadCatchIO-transformers  >= 0.2      && <0.4,
    mtl                        >= 2        && <3,
    old-locale,
    parallel                   >= 3        && <4,
    pureMD5                    == 2.1.*,
    random                     >= 1        && <2,
    regex-posix                >= 0.94.4   && <0.96,
    test-framework             >= 0.6      && <0.7,
    test-framework-hunit       >= 0.2.7    && <0.3,
    test-framework-quickcheck2 >= 0.2.12.1 && <0.3,
    text                       >= 0.11     && <0.12,
    time,
    transformers,
    unix-compat                >= 0.2      && <0.5,
    unordered-containers       >= 0.1.4.3  && <0.3,
    vector                     >= 0.6      && <0.11,
    zlib,
    zlib-enum                  >= 0.2.1    && <0.3

  extensions:
    BangPatterns,
    CPP,
    PackageImports,
    ScopedTypeVariables,
    EmptyDataDecls,
    ForeignFunctionInterface,
    OverloadedStrings,
    Rank2Types,
    TypeSynonymInstances,
    FlexibleInstances,
    ExistentialQuantification,
    OverloadedStrings,
    FlexibleContexts,
    GeneralizedNewtypeDeriving,
    DeriveDataTypeable,
    MultiParamTypeClasses

  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
